# organizer.cpp

./: .clang-format  CMakeLists.txt  README.md  organizer.toml
include/: inotify-cxx.h
src/: CMakeLists.txt  inotify-cxx.cpp  main.cpp  organizer.cpp
src/organizer/: config.cpp  config.hpp  manager.cpp  manager.hpp  utils.cpp  utils.hpp  version.hpp.in
